--- a/neuralnet/Dockerfile
+++ b/neuralnet/Dockerfile
@@ -2,7 +2,19 @@ FROM nvidia/cuda
 
 MAINTAINER grahama
 
-RUN apt-get update && apt-get install -y wget python3-dev python3-numpy python3-scipy python3-pip
+RUN apt-get update && apt-get install -y software-properties-common wget
+
+RUN add-apt-repository ppa:fkrull/deadsnakes
+
+RUN apt-get update && apt-get install -y python3.5 python3.5-dev libncurses5-dev libblas-dev liblapack-dev gfortran
+
+RUN wget https://bootstrap.pypa.io/get-pip.py
+
+RUN python3.5 get-pip.py
+
+RUN pip3 install setuptools numpy scipy --upgrade
+
+ADD requirements.txt .
 
 RUN pip3 install -r requirements.txt
 
