--- a/dockerbuilds/tf/Dockerfile
+++ b/dockerbuilds/tf/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:7.0-cudnn4-devel
+FROM nvidia/cuda:7.0-cudnn2-devel
 
 MAINTAINER grahama
 
@@ -9,6 +9,8 @@ WORKDIR root
 
 RUN pip3 install --upgrade setuptools numpy scipy
 
-RUN pip3 install --upgrade theano keras
-
 RUN pip3 install --upgrade https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.6.0-cp34-none-linux_x86_64.whl
+
+RUN pip3 install --upgrade keras
+
+RUN mkdir ~/.keras/ && echo '{"epsilon": 1e-07, "floatx": "float32", "backend": "theano"}' > ~/.keras/keras.json
